--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,22 +1,25 @@
 .header_container{
     display: flex;
     flex-wrap: wrap;
+    background-color: #3d405b;
+    height: 50px;
 }
 .Header-font{
     margin: 10px 20px 2px 5px;
+    color: #FFFFFF;
 }
 .sign_in{
     /* background-color: transparent;
     border: 0px;
     font-size: 17px; */
-    margin: 4px 5px 2px 950px;
+    margin: 8px 5px 2px 950px;
 }
 button {
     display: inline-block;
     border-radius: 4px;
-    background-color: #3d405b;
+    background-color: white;
     border: none;
-    color: #FFFFFF;
+    color: 3d405b;
     text-align: center;
     margin: 2px ;
     font-size: 15px;
