backend working do not change code

--- a/src/components/Signup/Signin.css
+++ b/src/components/Signup/Signin.css
@@ -1,6 +1,5 @@
 
-.main-container-sigup{
-    flex-direction: row-reverse;
+.main-container-sigin{
     /* background-color:gray; */
     margin: 3% 5% 3% 5%;
     padding: 1%;
