--- a/src/components/Hotelcards/Cards.css
+++ b/src/components/Hotelcards/Cards.css
@@ -31,6 +31,9 @@
     .cardThumbnail{
         transform: translateY(-40px);
         box-shadow: 0px 15px 18px  rgba(0, 0, 0, 0.7);
+        /* scale: 5;
+        object-fit: cover;
+        overflow: hidden; */
     }
 }
 
