--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -35,13 +35,13 @@
     margin: 10px;
     margin-left: 100px;
 }
-.Quote-container{
+/* .Quote-container{
     color:white;
     margin: 30px;
     text-align: center;
     line-height: 40px;
     margin-bottom: 98px;
-}
+} */
 .signin-logo{
     margin: 20px;
 }
