--- a/src/components/Signup/Signin.css
+++ b/src/components/Signup/Signin.css
@@ -1,7 +1,13 @@
 
+.outer-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 100px 100px 280px;
+}
 .main-container-sigin{
     /* background-color:gray; */
-    margin: 3% 5% 3% 5%;
+    /* margin: 3% 5% 3% 5%; */
     padding: 1%;
     display: flex;
     justify-content: center;
@@ -16,7 +22,7 @@
     align-items: center;
     /* border: 1px solid black; */
     margin: 3%;
-    width: 900px;
+    width: 700px;
     /* border-radius: 15px; */
 }
 .signup-side-img{
@@ -34,7 +40,7 @@
 .Main-signin-form{
     width: 30%;
     margin: 10px;
-    margin-left: 100px;
+    margin-left: 70px;
 }
 .Quote-container{
     color:white;
@@ -48,7 +54,23 @@
     display: flex;
 }
 .signin-logo{
-    margin: 20px;
+    /* margin: 20px; */
+}
+.signin-logo > h2{
+    margin-left: 50px;
+    margin-top: -20px;
+    padding-top: 0px;
+    margin-bottom: 0px;
+}
+.ACE_hotel{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 80px;
+    margin-bottom: 20px;
+    height: 70px;
+    width:80px;
+    margin-top: 0px;
 }
 .Username-container > label{
     color: gray;
@@ -64,13 +86,14 @@
     font-size: 20px;
     border-bottom: .5px solid black;
     outline: none;
-    width: 300px;
+    width: 280px;
     margin-top: 8px;
     padding: 2px;
 }
 .signup-checkbox-main-container{
     display: flex;
     font-size: smaller;
+    height: 10px;
 }
 .signup-checkbox-container{
     display: flex;
@@ -80,7 +103,7 @@
     /* display: flex;
     justify-content: center;
     align-items: center; */
-    margin: 30px;
+    margin: 40px;
 }
 .Signin_button{
     width: 200px;
@@ -90,6 +113,8 @@
     padding: 5px;
     border-radius: 10px;
     height: 50px;
+    margin-left: 60px;
+    margin-top: 20px;
 }
 .Signup_button_container{
     /* display: flex;
