--- a/src/components/Hero section/Herosection.css
+++ b/src/components/Hero section/Herosection.css
@@ -30,37 +30,29 @@
   }
   
   .search-container>input {
-    width: 30px;
+    background-color: #fff;
+    width: 400px;
     height: 10px;
+    padding: 18px 16px 18px 40px;
     border-radius: 10px;
     border: none;
     outline: none;
-    padding: 18px 16px;
     /* background-color: transparent; */
-    cursor: pointer;
-    transition: all .5s ease-in-out;
+    cursor:pointer;
   }
   
   .search-container>input::placeholder {
-    color: transparent;
+    /* color: transparent; */
   }
   
   .search-container>input:focus::placeholder {
     color: rgb(131, 128, 128);
   }
   
-  .search-container>input:focus,.input:not(:placeholder-shown) {
-    background-color: #fff;
-    /* border: 1px solid rgb(98, 0, 255); */
-    width: 290px;
-    height: 10px;
-    cursor: none;
-    padding: 18px 16px 18px 40px;
-  }
   
   .icon {
     position: absolute;
-    left: 10px;
+    left: 0px;
     top: -10;
     height: 40px;
     width: 40px;
@@ -69,12 +61,6 @@
     z-index: 1;
     fill: #b5d9f3;
     /* border: 1px solid rgb(98, 0, 255); */
-  }
-  
-  .input:hover +  .icon {
-    transform: rotate(360deg);
-    transition: .2s ease-in-out;
-    left: 0;
   }
   
   .search-container>input:focus + .icon,.input:not(:placeholder-shown) + .icon {
